--- a/css/styles.css
+++ b/css/styles.css
@@ -306,13 +306,18 @@ footer {
 #about {
   padding: 75px 15px;
   border-bottom: 1px solid #dcd9d9;
+  text-align: center;
 }
 #about h2 {
   color: #374054;
+  text-align: center;
 }
 #about p {
   color: #74808a;
   margin: 0;
+  text-align: center;
+  font-size: 1.1em;
+  padding: 0px 20px 10px 20px;
 }
 #experience {
   padding: 50px 15px;
@@ -453,7 +458,7 @@ footer {
   text-align: center;
 }
 #projects h2 {
-  color: #374054;
+  color: #000000;
   margin-bottom: 50px;
 }
 .project {
@@ -476,14 +481,17 @@ footer {
 }
 .project-info h3 {
   font-size: 1.5em;
-  font-weight: 300;
   color: #374054;
-  margin: 0 0 15px 0;
+  font-weight: 300;
+  padding: 0px 30px 0px 30px;
+  text-align: left;
 }
 .project-info p {
   color: #74808a;
   margin: 0 0 15px 0;
-  font-size: 0.9em;
+  font-size: 1em;
+  padding: 0px 30px 20px 30px;
+  text-align: left;
 }
 .no-image .project-info {
   position: relative;
@@ -612,7 +620,7 @@ footer {
     text-align: center;
   }
   #about p {
-    text-align: left;
+    text-align: center;
   }
 }
 @media only screen and (max-width: 768px) {
